<resources>
    <string name="app_name">ModaMedic</string>
    <string name="current_version_number">v1.10</string>
    <string name="daily_questionnaire_notification">לא ענית עדיין על השאלון היומי, פנה/י לנו איזה דקה?</string>
    <string name="periodic_questionnaire_notification_pref">כבר הרבה זמן שלא ענית על שאלון</string>
    <string name="periodic_questionnaire_notification_suffix">. ואנחנו רוצים לדעת מה קורה איתך. אולי תיכנס/י עכשיו?</string>
    <string name="notification_action">יאללה נכנס!</string>
    <string name="login">התחבר/י</string>
    <string name="questionnaire">שאלון</string>
    <string name="daily_questionnaire">שאלון יומי</string>
    <string name="hello">שלום</string>
    <string name="thanks">תודה</string>
    <string name="sent_succesfully">התשובות נשלחו בהצלחה</string>
    <string name="choose_else">אי אפשר לבחור את התשובה הזו ביחד עם מה שכבר בחרת. בטל/י את מה שבחרת קודם!</string>
    <string name="this_alone">תשובה כזו אפשר לבחור רק לבד, אז העפנו לך את כל השאר</string>
    <string name="multiple_choices">אפשר לבחור כמה תשובות הפעם</string>
    <string name="answerTheQuestion">קודם תענה/י על השאלה!</string>
    <string name="movingToPrevQuestion">חוזר לשאלה הקודמת</string>
    <string name="wrongDetails">אין התאמה בין אימייל לסיסמא</string>
    <string name="wrongEmailAddress">נא להזין כתובת אימייל תקנית</string>
    <string name="error">שגיאה</string>
    <string name="tryAgain">נסה/י שוב</string>
    <string name="id">אימייל</string>
    <string name="password">סיסמא</string>
    <string name="forgot_password">שכחתי סיסמא</string>
    <string name="reminder">תזכורת</string>
    <string name="back_to_home_page">חזור לדף הבית</string>
    <string name="answer_verification_question">תשובה לשאלת האימות</string>
    <string name="birthday_string">תאריך לידה</string>
    <string name="choose_birthday_string">בחר/י תאריך לידה</string>
    <string name="answer">הקלד/י כאן את תשובתך</string>
    <string name="send">שלח</string>
    <string name="wrong_answer_try_again">תשובה שגויה, נסה/י שוב</string>
    <string name="you_have_5_minutes">יש לך 5 דקות בלבד לשנות את הסיסמא</string>
    <string name="new_password">סיסמא חדשה</string>
    <string name="new_password_again">סיסמא חדשה שוב</string>
    <string name="password_has_changed">הסיסמא שונתה בהצלחה, התחבר/י באמצעות הסיסמא החדשה שלך!</string>
    <string name="password_has_changed2">הסיסמא שונתה בהצלחה!</string>
    <string name="userNonExists">לא נמצא משתמש</string>
    <string name="wrongAnswerOrDate">תאריך לידה ו/או תשובה לא תקינים</string>
    <string name="something_went_wrong">שגיאה. נסה/י שנית</string>
    <string name="new_password_title">הגדר/י סיסמא חדשה</string>
    <string name="password_are_not_equal">אי תאימות בין שדות סיסמא חדשה</string>
    <string name="error_on_server">אירעה שגיאה בשרת</string>
    <string name="succes">אישור</string>
    <string name="specialTokenInvalid">עברו חמש דקות, אז חזור/חזרי אחורה, ענה/י על שאלה האימות ונסה/י פעם נוספת.</string>
    <string name="gohome">חזור לדף הבית</string>
    <string name="movehome">עבור לדף הבית</string>
    <string name="old_password">סיסמא נוכחית</string>
    <string name="something_went_wrong_please_log_in">משהו בלתי צפוי קרה. התחבר/י למערכת מחדש ונסה/י שוב</string>
    <string name="watch_on">צמיד מחובר</string>
    <string name="watch_off">צמיד לא מחובר</string>
    <string name="short_watch_on">ON</string>
    <string name="short_watch_off">OFF</string>
    <string name="betweenZeroTo100">דרג/י בין 0 ל-100</string>
    <string name="choose_questionnaire">בחר/י שאלון</string>
    <string name="logout">התנתק/י</string>
    <string name="change_password">שינוי סיסמה</string>
    <string name="basicMedicine">לדוגמא ACAMOL, OPTALGIN, ARCOXIA, BREXIN, ETOPAN</string>
    <string name="advancedMedicine">לדוגמא ZALDIAR, TRAMADEX</string>
    <string name="narcoticMedicine">לדוגמא OXYCONTIN, PERCOCET, FENTANYL, קנביס רפואי</string>
    <string name="register">הירשם/י</string>
    <string name="register_title">הרשמה</string>
    <string name="phoneNumber">מספר פלאפון</string>
    <string name="radio_male">זכר</string>
    <string name="radio_female">נקבה</string>
    <string name="gender">מין</string>
    <string name="radio_smoker">מעשן</string>
    <string name="radio_nonSmoker">לא מעשן</string>
    <string name="smoke">עישון</string>
    <string name="radio_urgent_surgery">ניתוח דחוף</string>
    <string name="radio_planned_surgery">ניתוח מתוכנן</string>
    <string name="radio_no_surgery">ללא ניתוח</string>
    <string name="weight">משקל בקילוגרמים</string>
    <string name="height">גובה בסנטימטרים</string>
    <string-array name="education_spinner_choices">
        <item>השכלה אקדמאית</item>
        <item>השכלה תיכונית</item>
        <item>10–12 שנות לימוד</item>
        <item>6–9 שנות לימוד</item>
        <item>5 שנות לימוד או פחות</item>
        <item>לא מעוניין לענות</item>
    </string-array>
    <string name="FixAndTryAgain">תקן/י ונסה/י שוב</string>
    <string name="fill_email_fields">אנא מלא/י כתובת אימייל ונסה שוב</string>
    <string name="fill_password">אנא מלא/י סיסמא ונסה/י שוב</string>
    <string name="fill_weight">אנא מלא/י משקל ונסה/י שוב</string>
    <string name="fill_height">אנא מלא/י גובה ונסה/י שוב</string>
    <string name="fill_smoke">אנא בחר/י אפשרות בנוגע להרגלי עישון ונסה/י שוב</string>
    <string name="fill_gender">אנא בחר/י מין ונסה/י שוב</string>
    <string name="fill_surgery">אנא בחר/י אפשרות בנוגע לדחיפות הניתוח ונסה/י שוב</string>
    <string name="fill_education">אנא בחר/י באפשרות בנוגע להשכלה ונסה/י שוב</string>
    <string name="fill_date">אנא בחר תאריך לידה ונסה/י שוב</string>
    <string name="fill_registrationCode">אנא מלא/י קוד הרשמה מבית החולים סורוקה. אם אין לך כזה, פנה/י לרופא שלך</string>
    <string name="error_registrationCode">קוד הרשמה לא תקין, פנה/י לרופא שלך לצורך קבלת הקוד</string>
    <string name="error_taken_email">כתובת אימייל זו כבר רשומה במערכת, האם את/ה כבר רשום?</string>
    <string name="fill_phone">אנא מלא/י מספר פלאפון ונסה/י שוב</string>
    <string name="specialCode">קוד הרשמה מבית החולים סורוקה</string>
    <string name="fill_verification_answer">אנא מלא/י תשובה לשאלת אימות</string>
    <string name="choose_verification_question">בחר/י שאלת אימות</string>
    <string name="choose_education">בחר/י סוג השכלה</string>
    <string name="choose_your_questionnaires">בחר/י שאלונים רפואיים </string>
    <string name="choose_surgery_day_string">בחר/י תאריך ניתוח</string>
    <string name="fill_surgery_date">אנא מלא/י תאריך ניתוח</string>
    <string name="choose">בחר/י</string>
    <string name="firstName">שם פרטי</string>
    <string name="lastName">שם משפחה</string>
    <string name="fill_firstName">אנא מלא/י שם פרטי</string>
    <string name="fill_lastName">אנא מלא/י שם משפחה</string>
    <string name="choose_at_least_one_questionnaire">אנא בחר/י לפחות שאלון רפואי אחד</string>
    <string name="succesfull_registarion">ההרשמה בוצעה בהצלחה</string>
    <string name="save">שמור</string>
    <string name="settings_title">מידע אישי</string>
    <string name="your_current_surgery_day">תאריך הניתוח שלך הוא</string>
    <string name="change_surgery_day_string">עדכון תאריך ניתוח</string>
    <string name="change_your_questionnaires">עדכון שאלונים רפואיים</string>
    <string name="questionnaires_has_been_changed">השאלונים עודכנו בהצלחה</string>
    <string name="you_have_to_choose_at_least_one">עליך לבחור לפחות שאלון אחד</string>
    <string name="succesfull_date_change_to">תאריך הניתוח עודכן בהצלחה ל-</string>
    <string name="remember_me">השאר אותי מחובר/ת</string>
    <string name="consider_last_time">ענה/י על השאלה ביחס להרגשתך בשבועיים האחרונים</string>
    <string name="unknown_surgery_day">אינו ידוע</string>
    <string name="NoSurgeryDate">תאריך לא ידוע</string>
    <string name="your_current_surgery_day_full">תאריך הניתוח שלך אינו ידוע</string>
    <string name="medicine_examples_basic_title">דוגמאות לתרופה בסיסית:</string>
    <string name="medicine_examples_advanced_title">דוגמאות לתרופה מתקדמת:</string>
    <string name="medicine_examples_narcotic_title">דוגמאות לתרופה נרקוטית:</string>
    <string name="medicine_examples_basic_info">Paracetamol, Optalgin ‏(Dypiron), Indovis‏ (Indomethacin),‏ Xefo‏ (Lornoxicam),‏ Ibuprofen‏, Naproxen‏, Diclofenac‏, (Etopan) Etodolac ‏,( CELCOX)Celecoxib ,‏ Valdecoxib,‏ Nabuco ‏ (Nabumetone), Arcoxia‏ (Etonicoxib).
</string>
    <string name="medicine_examples_advanced_info">Tramadol, Codeine, Zaldiar, PERCOCET, CYMBALTA/Gabapentin/Lyrica‏.
</string>
    <string name="medicine_examples_narcotic_info">Oxycontin, OXYCODONE, TARGIN, Patch‏ Fentanyl, Butrans (Buprenorphine Matrix Patch), Cannabis,‏ MIR, MCR,
MSP, AQTIC, Adolan‏ (Methadone),Tricyclic antidepressants, Elatrol‏ (Amitriptyline), Tofranil‏ (Imipramine),‏ Deprexan‏ (Desipramine).
</string>
    <string name="more_medicine_examples">דוגמאות נוספות לתרופות</string>
    <string name="close">סגירה</string>
    <string name="terms_info">קראתי והסכמתי לתנאי השימוש</string>
    <string name="termsAndConditions">תנאי השימוש</string>
    <string name="full_terms_and_conditions"> אני מאשר ל-ModaMedic לאסוף עליי מידע לצרכי טיפול ומחקר. המידע הנאסף למעשה כולל צפייה במזג האוויר במקום בו אני נמצא, מעקב אחר כמות הצעדים היומית אותה אבצע, המרחק היומי אותו גמעתי, נתונים לגבי איכות השינה שלי וכן צריכת קלוריות יומית. לא יתבצע כל שימוש לרעה במידע והוא מאוחסן בבסיס נתונים מאובטח.  \n בכל עת אוכל לבטל את ההרשאות לאיסוף המידע שלי על ידי כניסה להגדרות האפליקציה במכשיר. המידע לא יחשף לאדם מלבד רופאים בעלי הרשאה מתאימה מבית החולים סורוקה. \n אני מסכים לשתף פעולה עם המחקר של בית החולים סורוקה בשיתוף סטודנטים מאוניברסיטת בן גוריון בנגב.</string>
    <string name="fill_terms">לא ניתן להירשם ללא הסכמה לתנאי השימוש. סמן/י וי בתיבה המתאימה ונסה שנית</string>
    <string name="unknown_error_occured">שגיאה לא ידועה, אנא נסה שנית במועד מאוחר יותר</string>
    <string name="error_on_server_try_later">אירעה שגיאה בשרת, אנה נסה שנית במועד מאוחר יותר</string>
    <string name="no_internet_connection">אין חיבור אינטרנט פעיל. התחבר לרשת ונסה שנית</string>


</resources>
