<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/verification_question"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="View.RegisterNewUserActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioGroup
                android:id="@+id/radioSurgery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="465dp"
                android:layout_centerHorizontal="true"
                >

                <RadioButton
                    android:id="@+id/radioUrgentSurgery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_urgent_surgery"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/radioPlannedSurgery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_planned_surgery"
                    android:textSize="20sp" />

            </RadioGroup>

            <EditText
                android:id="@+id/newPasswordAgain"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="64dp"
                android:layout_marginTop="195dp"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/new_password_again"
                android:inputType="textPassword"
                android:shadowColor="@color/colorAccent"
                android:textColorHighlight="@color/colorAccent"
                android:textColorLink="@color/colorAccent" />

            <RadioGroup
                android:id="@+id/radioSex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="305dp"
                android:layout_centerHorizontal="true"

                >

                <RadioButton
                    android:id="@+id/radioMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_male"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/radioFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_female"
                    android:textSize="20sp" />

            </RadioGroup>

            <EditText
                android:id="@+id/phoneNumber"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="64dp"
                android:layout_marginTop="255dp"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/phoneNumber"
                android:inputType="phone"
                android:shadowColor="@color/colorAccent"
                android:textColorHighlight="@color/colorAccent"
                android:textColorLink="@color/colorAccent" />

            <TextView
                android:id="@+id/title"
                android:layout_width="273dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="68dp"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:text="@string/register_title"
                android:textSize="30sp" />

            <RadioGroup
                android:id="@+id/radioSmoke"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="385dp"
                android:layout_centerHorizontal="true">

                <RadioButton
                    android:id="@+id/radioSmoker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_smoker"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/radioNonSmoker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_nonSmoker"
                    android:textSize="20sp" />

            </RadioGroup>

            <EditText
                android:id="@+id/newPassword"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="64dp"
                android:layout_marginTop="135dp"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:shadowColor="@color/colorAccent"
                android:textColorHighlight="@color/colorAccent"
                android:textColorLink="@color/colorAccent" />

            <Button
                android:id="@+id/send"
                android:layout_width="242dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="1120dp"
                android:layout_marginEnd="87dp"
                android:background="@drawable/custom_system_button"
                android:backgroundTintMode="src_in"
                android:gravity="center"
                android:onClick="register"
                android:text="@string/register"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <EditText
                android:id="@+id/email_address"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="64dp"
                android:layout_marginTop="75dp"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/id"
                android:inputType="textEmailAddress"
                android:shadowColor="@color/colorAccent"
                android:textColorHighlight="@color/colorAccent"
                android:textColorLink="@color/colorAccent" />

            <Spinner
                android:id="@+id/education_spinner"
                android:entries="@array/education_spinner_choices"
                android:layout_width="275dp"
                android:layout_height="45dp"
                android:background="@android:drawable/editbox_dropdown_dark_frame"
                android:layout_marginTop="545dp"
                android:layout_centerHorizontal="true"
                android:spinnerMode="dropdown"/>

            <EditText
                android:id="@+id/weight"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="64dp"
                android:layout_marginTop="605dp"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/weight"
                android:inputType="number"
                android:shadowColor="@color/colorAccent"
                android:textColorHighlight="@color/colorAccent"
                android:textColorLink="@color/colorAccent" />

            <EditText
                android:id="@+id/height"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="64dp"
                android:layout_marginTop="665dp"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/height"
                android:inputType="number"
                android:shadowColor="@color/colorAccent"
                android:textColorHighlight="@color/colorAccent"
                android:textColorLink="@color/colorAccent" />

            <Button
                android:id="@+id/chooseDateRegister"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="242dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="725dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/custom_system_button"
                android:backgroundTintMode="src_in"
                android:gravity="center"
                android:onClick="chooseDate"
                android:text="@string/choose_birthday_string"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <EditText
                android:id="@+id/specialCodeRegistration"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="64dp"
                android:layout_marginTop="785dp"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/specialCode"
                android:inputType="textPassword"
                android:shadowColor="@color/colorAccent"
                android:textColorHighlight="@color/colorAccent"
                android:textColorLink="@color/colorAccent" />

            <Spinner
                android:id="@+id/verification_question_spinner"
                android:layout_width="275dp"
                android:layout_height="45dp"
                android:background="@android:drawable/editbox_dropdown_dark_frame"
                android:layout_marginTop="870dp"
                android:layout_centerHorizontal="true"
                android:spinnerMode="dropdown"/>

            <EditText
                android:id="@+id/verification_answer"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="910dp"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/answer_verification_question"
                android:inputType="text"
                android:shadowColor="@color/colorAccent"
                android:textColorHighlight="@color/colorAccent"
                android:textColorLink="@color/colorAccent" />

            <TextView
                android:id="@+id/chooseQuestionTitle"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="840dp"
                android:textSize="20dp"
                android:gravity="center_horizontal"
                android:text="@string/choose_verification_question"
                android:layout_height="wrap_content"
                android:layout_width="270dp" />

            <TextView
                android:id="@+id/chooseQuestionnaireTitle"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="960dp"
                android:textSize="20dp"
                android:gravity="center_horizontal"
                android:text="@string/choose_your_questionnaires"
                android:layout_height="wrap_content"
                android:layout_width="270dp" />

            <View.ViewUtils.MultiSelectionSpinner
                android:id="@+id/questionnaires_spinner"
                android:layout_width="275dp"
                android:layout_height="45dp"
                android:background="@android:drawable/editbox_dropdown_dark_frame"
                android:layout_marginTop="1000dp"
                android:layout_centerHorizontal="true"
                android:spinnerMode="dropdown"/>

            <Button
                android:id="@+id/chooseDateOfSurgery"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="242dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="1060dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/custom_system_button"
                android:backgroundTintMode="src_in"
                android:gravity="center"
                android:onClick="chooseDateOfSurgery"
                android:text="@string/choose_surgery_day_string"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        </RelativeLayout>
    </ScrollView>


</RelativeLayout>