<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/verification_question"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="View.SetNewPasswordForLoggedInUserActivity">


    <Button
        android:id="@+id/send"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="242dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="360dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/custom_system_button"
        android:backgroundTintMode="src_in"
        android:gravity="center"
        android:onClick="setNewPassword"
        android:text="@string/send"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="210dp"
        android:ems="10"
        android:layout_centerHorizontal="true"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:gravity="center_horizontal"
        android:shadowColor="@color/colorAccent"
        android:textColorHighlight="@color/colorAccent"
        android:textColorLink="@color/colorAccent" />

    <EditText
        android:id="@+id/newPasswordAgain"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="270dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/new_password_again"
        android:inputType="textPassword"
        android:shadowColor="@color/colorAccent"
        android:textColorHighlight="@color/colorAccent"
        android:textColorLink="@color/colorAccent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="68dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/new_password_title"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/five_minutes_title"
        android:layout_width="370dp"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:gravity="center_horizontal"
        android:text="@string/you_have_5_minutes"
        android:textSize="24sp" />

    <Button
        android:id="@+id/goHome"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/custom_system_button"
        android:backgroundTintMode="src_in"
        android:gravity="center"
        android:onClick="goHomePage"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:text="@string/back_to_home_page"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />


</RelativeLayout>