<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="View.SettingsActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="166dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:src="@drawable/app_logo" />

    <TextView
        android:id="@+id/setting_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="174dp"
        android:text="@string/settings_title"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/your_current_surgery_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="116dp"
        android:layout_marginTop="240dp"
        android:text="@string/your_current_surgery_day"
        android:textSize="20sp" />

    <Button
        android:id="@+id/chooseDateOfSurgery_button_in_settings"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="330dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/custom_system_button"
        android:backgroundTintMode="src_in"
        android:onClick="chooseDateOfSurgery"
        android:text="@string/change_surgery_day_string"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <Button
        android:id="@+id/questionnaires_button_in_settings"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:background="@drawable/custom_system_button"
        android:backgroundTintMode="src_in"
        android:onClick="chooseQuestionnaires"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:text="@string/change_your_questionnaires"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <Button
        android:id="@+id/goHome"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/custom_system_button"
        android:backgroundTintMode="src_in"
        android:gravity="center"
        android:onClick="goHomePage"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:text="@string/back_to_home_page"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

</RelativeLayout>